# hisui

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  CMakeLists.txt  Cargo.toml  Dockerfile  NOTICE.md  README.md  VERSION  build.bash  canary.py  lint.bash  prek.toml  pyproject.toml
.cargo/: config.toml
.claude/: CLAUDE.md
.github/: dependabot.yml  renovate.json
.github/workflows/: build-nvcodec.yml  build.yml  ci-macos.yml  ci-nvcodec.yml  ci-windows.yml  ci.yml  claude.yml  e2e-test.yml  lint.yml  pypi-publish.yml  pytest.yml  release.yml
cmake/: clang-aarch64-toolchain.cmake
crates/shiguredo_audio_toolbox/: CHANGES.md  Cargo.toml  README.md  build.rs
crates/shiguredo_dav1d/: Cargo.toml  README.md  build.rs
crates/shiguredo_dav1d/src/: lib.rs
crates/shiguredo_fdk_aac/: CHANGES.md  Cargo.toml  README.md  build.rs
crates/shiguredo_fdk_aac/src/: lib.rs  sys.rs
crates/shiguredo_libvpx/: Cargo.toml  README.md  build.rs
crates/shiguredo_libvpx/src/: lib.rs  sys.rs
crates/shiguredo_libyuv/: Cargo.toml  README.md  build.rs
crates/shiguredo_libyuv/src/: lib.rs
crates/shiguredo_nvcodec/: CHANGES.md  Cargo.toml  README.md  build.rs
crates/shiguredo_nvcodec/src/: decode.rs  encode.rs  error.rs  guid.rs  lib.rs  sys.rs
crates/shiguredo_openh264/: CHANGES.md  Cargo.toml  README.md  build.rs
crates/shiguredo_openh264/src/: lib.rs  sys.rs
crates/shiguredo_opus/: CHANGES.md  Cargo.toml  README.md  build.rs
crates/shiguredo_opus/src/: lib.rs  sys.rs
crates/shiguredo_svt_av1/: CHANGES.md  Cargo.toml  README.md  build.rs
crates/shiguredo_svt_av1/src/: lib.rs  sys.rs
crates/shiguredo_video_toolbox/: Cargo.toml  README.md  build.rs
crates/shiguredo_video_toolbox/src/: lib.rs  sys.rs
doc/: BUILD_LINUX.md  FAQ.md  KNOWN_ISSUES.md  LAYOUT.md  USE.md
docker/: Dockerfile  Dockerfile.local
docs/: build.md  command_compose.md  command_inspect.md  command_legacy.md  command_list_codecs.md  command_tune.md  command_vmaf.md  docker.md  encode.md  hisui_legacy.md  layout.md  layout_decode_params.md  layout_encode_params.md  layout_region.md  layout_spec.md  migrate_hisui_legacy.md  tuning.md  usage.md
docs/internals/: README.md  architecture_overview.md  bootstrap.md  media_pipeline.md  mixer.md  obsws.md  processor_id.md  stats.md  timestamp.md
docs/obsws/: PERSISTENT_DATA.md  PROTOCOL_STATUS.md  REQUEST_SEQUENCE_EXAMPLES.md  STATE_FILE.md
docs/server/: output.md
e2e-tests/: .gitignore  conftest.py  hisui_server.py  processor_metrics.py  pyproject.toml
e2e-tests/bootstrap/: test_bootstrap.py
e2e-tests/obsws/: helpers.py  test_bootstrap.py  test_connection.py  test_events.py  test_http.py  test_hybrid_recording.py  test_obsws.py  test_output.py  test_request_batch.py  test_requests.py  test_state_file.py
e2e-tests/obsws_scenario_client/: Cargo.toml
e2e-tests/server/: test_processor.py  test_reverse_proxy.py  test_server.py
examples/bootstrap_client/: Cargo.toml
examples/bootstrap_client/src/: main.rs
examples/camera_record/: Cargo.toml
examples/camera_sora_grid/: Cargo.toml
examples/hls_s3/: Cargo.toml  README.md
examples/mpeg_dash_s3/: Cargo.toml  README.md
examples/obsws_bootstrap/: Cargo.toml
examples/obsws_bootstrap/src/: adm.rs  client.rs  encode.rs  event.rs  http.rs  lib.rs  main.rs  mp4.rs  observer.rs  obsws_message.rs  sdp.rs  state.rs  stats.rs  video_sender.rs
examples/sora_publish/: Cargo.toml
examples/sora_publish/src/: main.rs
examples/sora_source/: Cargo.toml
examples/sora_source/src/: main.rs
layout-examples/: compose-default.json  compose-default.jsonc  tune-libvpx-vp8.jsonc  tune-libvpx-vp9.json  tune-nvcodec-av1.jsonc  tune-nvcodec-h264.jsonc  tune-nvcodec-h265.jsonc  tune-openh264.json  tune-svt-av1.json  tune-video-toolbox-h264.json  tune-video-toolbox-h264.jsonc  tune-video-toolbox-h265.json  tune-video-toolbox-h265.jsonc  tune-vp8.json  vmaf-default.json
pipeline-examples/: compose.jsonc  inspect.jsonc  mcu.jsonc  retranscode-video.jsonc  sora-compose.jsonc  sora-publish.jsonc
plugin-examples/: pyproject.toml  sora_publish.py  sora_source.py
python/: .gitignore  README.md
python/hisui/: __init__.py
python/tests/: test_hisui.py
scripts/: README.md  maturin_build.sh  maturin_develop.sh
search-space-examples/: full.json  full.jsonc
src/: archive_item.cpp  archive_item.hpp  arg_utils.rs  audio.rs  audio_converter.rs  audio_timestamp_tracker.rs  channel.rs  codec_string.rs  command_line_args.rs  composer.rs  config.cpp  config.hpp  constants.hpp  decoder.rs  decoder_audio_toolbox.rs  decoder_dav1d.rs  decoder_fdk_aac.rs  decoder_libvpx.rs  decoder_nvcodec.rs  decoder_nvcodec_params.rs  decoder_openh264.rs  decoder_opus.rs  decoder_video_toolbox.rs  encoder.rs  encoder_audio_toolbox.rs  encoder_fdk_aac.rs  encoder_libvpx.rs  encoder_libvpx_params.rs  encoder_nvcodec.rs  encoder_nvcodec_params.rs  encoder_openh264.rs  encoder_openh264_params.rs  encoder_opus.rs  encoder_svt_av1.rs  encoder_svt_av1_params.rs  encoder_video_toolbox.rs  encoder_video_toolbox_params.rs  endpoint_http_bootstrap.rs  endpoint_http_metrics.rs  endpoint_http_rpc.rs  (+150 more)
src/audio/: aac.rs  basic_sequencer.cpp  basic_sequencer.hpp  buffer_fdk_aac_encoder.cpp  buffer_fdk_aac_encoder.hpp  buffer_opus_encoder.hpp  converter.rs  fdk_aac.cpp  fdk_aac.hpp  lyra_decoder.cpp  lyra_decoder.hpp  lyra_handler.cpp  lyra_handler.hpp  opus_decoder.hpp  webm_source.cpp  (+1 more)
test/: CMakeLists.txt
test/layout/: CMakeLists.txt  cell_util_test.cpp  grid_test.cpp  main.cpp  overlap_test.cpp  region_test.cpp  source_test.cpp
test/metadata/: CMakeLists.txt  main.cpp  time_offset.cpp
test/util/: CMakeLists.txt  wildcard_test.cpp
test/version/: CMakeLists.txt  version_test.cpp
test/video/: CMakeLists.txt  vpx_test.cpp  yuv_test.cpp
testdata/: archive-black-silent.webm
tests/: decoder_tests.rs  e2e.rs  layout_test.rs  layout_tests.rs  mixer_audio_test.rs  mixer_video_test.rs  mixer_video_tests.rs  reader_webm_test.rs  reader_webm_tests.rs  writer_mp4_tests.rs
workflows/: ci-macos.yml  ci.yml
(+370 files in other folders)
