[package]
name = "hisui"
version = "2026.1.0-canary.1"
edition = "2024"
rust-version = "1.90"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "Recording Composition Tool Hisui"
homepage = "https://github.com/shiguredo/hisui"
repository = "https://github.com/shiguredo/hisui"
readme = "README.md"

[features]
default = ["libvpx"]

fdk-aac = ["shiguredo_fdk_aac"]
nvcodec = ["shiguredo_nvcodec"]
libvpx = ["shiguredo_libvpx"]

[dependencies]
# NOTE: 通常の依存は突然挙動が変わることが内容に、バージョンは厳密一致で指定している

tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["fmt", "std"] }
noargs = "=0.4.2"
nojson = "=0.3.9"
base64 = "=0.22.1"
rustls = { version = "=0.23.37", default-features = false, features = [
    "std",
    "tls12",
    "aws-lc-rs",
] }
rustls-platform-verifier = "=0.6.2"
tokio = { version = "=1.50.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "sync",
    "time",
] }
tokio-rustls = "=0.26.4"
shiguredo_mp4 = "=2026.2.0"
shiguredo_http11 = "=2026.1.1"
shiguredo_rtmp = "=2026.1.0-canary.5"
shiguredo_rtsp = "=2026.1.0-canary.0"
shiguredo_srt = "=2026.1.0-canary.0"
shiguredo_webrtc = "=0.146.0"
shiguredo_video_device = "=2026.1.0-canary.3"
mpeg2ts = "=0.6.0"
nopng = "=0.1.0"
aws-lc-rs = "=1.16.2"
libc = "=0.2.183"

shiguredo_dav1d = { version = "=2025.1.0", path = "crates/shiguredo_dav1d/" }
shiguredo_fdk_aac = { version = "=2025.1.1", path = "crates/shiguredo_fdk_aac/", optional = true }
shiguredo_libvpx = { version = "=2026.1.0-canary.2", optional = true }
shiguredo_libyuv = { version = "=2026.1.0-canary.0" }
shiguredo_nvcodec = { version = "=2026.1.0-canary.1", optional = true }
shiguredo_openh264 = { version = "=2026.1.0-canary.3" }
shiguredo_opus = { version = "=2026.1.0-canary.4" }
shiguredo_svt_av1 = { version = "=2026.1.0-canary.0" }
shiguredo_websocket = "=2026.1.0-canary.5"

[target.'cfg(target_os = "macos")'.dependencies]
shiguredo_audio_toolbox = { version = "=2026.1.0-canary.0" }
shiguredo_video_toolbox = { version = "=2026.1.0-canary.1" }

[dev-dependencies]
tempfile = "3.18.0"

[workspace]
members = [
    "crates/shiguredo_dav1d",
    "crates/shiguredo_fdk_aac",
]
