[project]
name = "hisui"
dynamic = ["version"]
description = "Recording Composition Tool Hisui を Python から利用可能にする CLI パッケージ"
authors = [{ name = "Shiguredo Inc." }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
readme = "README.md"
keywords = ["recording", "composition", "video", "cli"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/shiguredo/hisui"
Repository = "https://github.com/shiguredo/hisui"

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = ["pytest", "ruff", "ty"]

[tool.maturin]
bindings = "bin"
strip = true
python-source = "python"

[tool.maturin.target.aarch64-apple-darwin]
macos-deployment-target = "14.0"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
