[build-system]
build-backend = "maturin"
requires = ["maturin>=1.9,<2.0"]

[project]
name = "hisui"
authors = [{ name = "Shiguredo Inc.", email = "contact+pypi@shiguredo.jp" }]
dynamic = ["version"]
description = "CLI package for using Recording Composition Tool Hisui from Python"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/shiguredo/hisui"
Repository = "https://github.com/shiguredo/hisui"

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest", "ruff", "ty"]

[tool.maturin]
bindings = "bin"
strip = true
python-source = "python"

[tool.maturin.target.aarch64-apple-darwin]
macos-deployment-target = "14.0"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
