[package]
name = "shiguredo_fdk_aac"
version = "2025.1.0-canary.2"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "FDK-AAC AAC encoder for Hisui"
homepage = "https://github.com/shiguredo/hisui"
repository = "https://github.com/shiguredo/hisui"
readme = "README.md"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.72.0"
