[package]
name = "shiguredo_nvcodec"
version = "2025.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "NVIDIA Video Codec decoders and encoders for Hisui"
homepage = "https://github.com/shiguredo/hisui"
repository = "https://github.com/shiguredo/hisui"
readme = "README.md"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.72.0"
toml = "0.9.0"

# NVIDIA Video Codec SDK 用の外部ライブラリビルド用メタデータ
# (この内容は build.rs の中からのみ参照される)
[package.metadata.external-dependencies]
nvcodec = { url = "https://developer.nvidia.com/downloads/designworks/video-codec-sdk/secure/13.0.19/video_codec_interface_13.0.19.zip", version = "13.0.19" }

