[package]
name = "shiguredo_openh264"
version = "2025.1.0-canary.2"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "OpenH264 H.264 encoder for Hisui"
homepage = "https://github.com/shiguredo/hisui"
repository = "https://github.com/shiguredo/hisui"
readme = "README.md"
build = "build.rs"

[dependencies]
libloading = "0.8.6"

[build-dependencies]
bindgen = "0.72.0"
toml = "0.9.0"

# 以降は外部ライブラリビルド用のメタデータ
# (この内容は build.rs の中からのみ参照される)
[package.metadata.external-dependencies]
openh264 = { git = "https://github.com/cisco/openh264.git", version = "v2.6.0" }
