[package]
name = "shiguredo_opus"
version = "2025.1.0-canary.0"
edition = "2024"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "Opus encoder for Hisui"
homepage = "https://github.com/shiguredo/hisui"
repository = "https://github.com/shiguredo/hisui"
readme = "README.md"
build = "build.rs"

[features]
# Docs.rs 向けのビルド時に build.rs 内でネットワークアクセスが発生すると失敗してしまうので、
# それに対処するためのフラグ。
# 指定されている場合には build.rs での処理がスキップされる。
docs-rs = []

[package.metadata.docs.rs]
features = ["docs-rs"]

[dependencies]

[build-dependencies]
bindgen = "0.71.1"
toml = "0.8.20"

# 以降は外部ライブラリビルド用のメタデータ
# (この内容は build.rs の中からのみ参照される)
[package.metadata.external-dependencies]
opus = { git = "https://github.com/xiph/opus.git", version = "v1.5.2" }
