[package]
name = "shiguredo_svt_av1"
version = "2025.1.0-canary.2"
edition = "2024"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "SVT-AV1 AV1 encoder for Hisui"
homepage = "https://github.com/shiguredo/hisui"
repository = "https://github.com/shiguredo/hisui"
readme = "README.md"
build = "build.rs"

[dependencies]
log = "0.4.27"

[build-dependencies]
bindgen = "0.72.0"
toml = "0.9.0"

# 以降は外部ライブラリビルド用のメタデータ
# (この内容は build.rs の中からのみ参照される)
[package.metadata.external-dependencies]
SVT-AV1 = { git = "https://gitlab.com/AOMediaCodec/SVT-AV1.git", version = "v3.0.2" }
