[package]
name = "shiguredo_svt_av1"
version = "2025.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "SVT-AV1 AV1 encoder for Hisui"
homepage = "https://github.com/shiguredo/hisui"
repository = "https://github.com/shiguredo/hisui"
readme = "README.md"
build = "build.rs"

[dependencies]
log = "0.4.27"

[build-dependencies]
bindgen = "0.72.0"
cmake = "0.1"
sha2 = "0.10.9"
shiguredo_toml = "2026.1.0"

# 以降は外部ライブラリビルド用のメタデータ
# (この内容は build.rs の中からのみ参照される)
[package.metadata.external-dependencies.SVT-AV1]
git = "https://gitlab.com/AOMediaCodec/SVT-AV1.git" 
source = "https://oss-mirrors.shiguredo.jp/SVT-AV1-v3.1.2.tar.gz"
version = "v3.1.2"
sha256 = "d0d73bfea42fdcc1222272bf2b0e2319e9df5574721298090c3d28315586ecb1"
