[package]
name = "shiguredo_video_toolbox"
version = "2025.1.0-canary.0"
edition = "2024"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "Apple Vision Toolbox H.264 / H.265 decoders and encoders for Hisui"
homepage = "https://github.com/shiguredo/hisui"
repository = "https://github.com/shiguredo/hisui"
readme = "README.md"
build = "build.rs"

[dependencies]
log = "0.4.26"

[build-dependencies]
bindgen = "0.71.1"
