[package]
name = "bootstrap_client"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
shiguredo_webrtc = "0.146.0"
shiguredo_http11 = "2026.1.1"
nojson = "0.3.9"
tokio = { version = "1.50.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "time",
    "sync",
] }
noargs = "0.4.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "std"] }
