[package]
name = "obsws_bootstrap"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
shiguredo_webrtc = { workspace = true }
shiguredo_http11 = { workspace = true }
shiguredo_libvpx = { workspace = true }
shiguredo_opus = { workspace = true }
shiguredo_mp4 = { workspace = true }
nojson = { workspace = true }
tokio = { workspace = true }
noargs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
